--- a/template/home_page.html
+++ b/template/home_page.html
@@ -12,9 +12,12 @@
     </head>
         <body>
             <div class='text-center'>
-                <h1>Ola Mundo!</h1>
+                <h1>{{title}}</h1>
+            <h2>{{content}}</h2>
+            <h2>Funcionando</h2>
             </div>
-        <!-- Optional JavaScript -->
+        
+            <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
